# sgl

./: CMakeLists.txt  README.md  README_CN.md  build.cmake  sgl.cmake
.github/workflows/: codeql.yml  generic-arm-gcc.yml  macos.yml  ubuntu-aarch64-gcc.yml  ubuntu-armv7-gcc.yml  ubuntu-clang.yml  ubuntu-gcc.yml  ubuntu-mips-gcc.yml  ubuntu-mips64-gcc.yml  windows.yml
cmake/: config.h.in
docs/Chinese/: 001.开始使用SGL.md  MDK5移植说明.md
source/: lm.cfg  sgl.h  sgl_config.h
source/core/: sgl_anim.c  sgl_core.c  sgl_event.c  sgl_misc.c  sgl_snprintf.c
source/draw/: sgl_draw_arc.c  sgl_draw_circle.c  sgl_draw_line.c  sgl_draw_rect.c  sgl_draw_ring.c  sgl_draw_text.c  sgl_draw_xform.c
source/fonts/: Harmony_16.c  OPPOSans_Medium_16.c  OPPOSans_Medium_24.c  build.cmake  lm.cfg  sgl_ascii_consolas14.c  sgl_ascii_consolas23.c  sgl_ascii_consolas24.c  sgl_ascii_consolas32.c  sgl_ascii_song23.c
source/include/: sgl_anim.h  sgl_cfgfix.h  sgl_core.h  sgl_draw.h  sgl_event.h  sgl_font.h  sgl_log.h  sgl_math.h  sgl_types.h
source/mm/other/: sgl_mm.c
source/widgets/: build.cmake  lm.cfg
source/widgets/2dball/: sgl_2dball.c  sgl_2dball.h
source/widgets/arc/: sgl_arc.c
source/widgets/bar/: sgl_bar.h
source/widgets/box/: sgl_box.c  sgl_box.h
source/widgets/button/: sgl_button.c  sgl_button.h
source/widgets/canvas/: sgl_canvas.c  sgl_canvas.h
source/widgets/checkbox/: sgl_checkbox.c  sgl_checkbox.h
source/widgets/dropdown/: sgl_dropdown.c  sgl_dropdown.h
source/widgets/ext_img/: sgl_ext_img.c  sgl_ext_img.h
source/widgets/icon/: sgl_icon.c  sgl_icon.h
source/widgets/keyboard/: sgl_keyboard.c  sgl_keyboard.h
source/widgets/label/: sgl_label.c  sgl_label.h
source/widgets/led/: sgl_led.c  sgl_led.h
source/widgets/line/: sgl_line.c  sgl_line.h
source/widgets/msgbox/: sgl_msgbox.c  sgl_msgbox.h
source/widgets/numberkbd/: sgl_numberkbd.c
source/widgets/polygon/: sgl_polygon.c  sgl_polygon.h
source/widgets/progress/: sgl_progress.c  sgl_progress.h
source/widgets/rectangle/: sgl_rectangle.h
source/widgets/ring/: sgl_ring.h
source/widgets/scope/: sgl_scope.c  sgl_scope.h
source/widgets/scroll/: sgl_scroll.c  sgl_scroll.h
source/widgets/slider/: sgl_slider.c  sgl_slider.h
source/widgets/switch/: sgl_switch.c  sgl_switch.h
source/widgets/textbox/: sgl_textbox.c  sgl_textbox.h
source/widgets/textline/: sgl_textline.c  sgl_textline.h
source/widgets/unzip_image/: sgl_unzip_image.c
source/widgets/win/: sgl_win.c  sgl_win.h
